--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
-        android:hint="Enter number 1" />
+        android:hint="Enter the claim value" />
 
     <EditText
         android:id="@+id/editTextNumber2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:hint="Enter number 2"
+        android:inputType="text"
+        android:hint="Enter verification type"
         android:layout_marginTop="16dp" />
 
     <Button
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:onClick="Click"
-        android:text="Multiply" />
+        android:text="Verify" />
 
     <TextView
         android:id="@+id/textViewResult"
@@ -35,5 +35,12 @@
         android:layout_marginTop="16dp"
         android:textSize="24sp"
         android:textStyle="bold" />
+    <Button
+        android:id="@+id/buttonVote"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:onClick="VoteClick"
+        android:text="Vote" />
 
 </LinearLayout>
